# nlq-agent

./: README.md  agent.py  data_info.md  pyproject.toml  requirements.txt  server.py
data/: README.md  ecommerce.db
handlers/: evaluator.py  executor.py  formatter.py  generator.py  intent_safety.py  planner.py  query_refiner.py  retriever.py  validator.py
static/: index.html
tests/: test_agent_mock.py  test_classifier.py  test_llama_classifier.py  test_llm_client.py  verify_server.py
utils/: db_manager.py  init_db.py  llm_client.py  seed_db.py  vector_store.py
